--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -83,6 +83,21 @@
               <li><a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" class="link">
                 ${{ index.menu_tickets }}$
               </a></li>
+
+              <li class="socials-block-mobile">
+                <div class="flex socials-block">
+                  <a href="https://www.facebook.com/OdessaPY-Conference-1077262752435999/" target="_blank">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                  </a>
+                  <a href="https://twitter.com/OdessaPY_Conf" target="_blank">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                  </a>
+                  <a href="https://www.instagram.com/odessapy_conference" target="_blank">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                  </a>
+                </div>
+              </li>
+
               <li class="lang-mobile">
                 <a href="${{ index.lang_link_ru }}$">ru</a>
                 |
@@ -99,6 +114,18 @@
               <a href="${{ index.lang_link_en }}$">en</a>
             </li>
           </ul>
+
+          <div class="socials-block header-socials-block">
+            <a href="https://www.facebook.com/OdessaPY-Conference-1077262752435999/" target="_blank">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/OdessaPY_Conf" target="_blank">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/odessapy_conference" target="_blank">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+          </div>
           <div class="brgr-menu"></div>
         </div>
 
