--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -85,13 +85,13 @@
 
               <li class="socials-block-mobile">
                 <div class="flex socials-block">
-                  <a href="https://www.facebook.com/OdessaPY-Conference-1077262752435999/" target="_blank">
+                  <a href="https://www.facebook.com/OdessaPY-Conference-1077262752435999/" target="_blank" title="facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
-                  <a href="https://twitter.com/OdessaPY_Conf" target="_blank">
+                  <a href="https://twitter.com/OdessaPY_Conf" target="_blank" title="twitter">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
-                  <a href="https://www.instagram.com/odessapy_conference" target="_blank">
+                  <a href="https://www.instagram.com/odessapy_conference" target="_blank" title="instagram">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                   </a>
                 </div>
@@ -115,13 +115,13 @@
           </ul>
 
           <div class="socials-block header-socials-block">
-            <a href="https://www.facebook.com/OdessaPY-Conference-1077262752435999/" target="_blank">
+            <a href="https://www.facebook.com/OdessaPY-Conference-1077262752435999/" target="_blank" title="facebook">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/OdessaPY_Conf" target="_blank">
+            <a href="https://twitter.com/OdessaPY_Conf" target="_blank" title="twitter">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="https://www.instagram.com/odessapy_conference" target="_blank">
+            <a href="https://www.instagram.com/odessapy_conference" target="_blank" title="instagram">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
