--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -471,7 +471,7 @@
     <button data-remodal-action="close" class="remodal-close"></button>
     <div class="flex speakers-modal_heading">
       <div class="speakers-modal_img">
-        <img src="https://via.placeholder.com/1x1" data-src="public/img/speakers/andrey_grachev.png" alt="">
+        <img src="https://via.placeholder.com/1x1"  alt="placeholder">
       </div>
       <div class="speakers-modal_txt ">
         <div class="speaker-name">
