--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -304,22 +304,22 @@
       <div class="container">
         <div class="h2">${{ index.schedule_head }}$</div>
 
-        <div class="m-t-50 p-t-50 h3 text-center text-grey">
-        ${{ index.schedule_txt }}$
-        </div>
-
-        <!--<div class="schedule-list-container">-->
-          <!--<div id="schedule-list" class="schedule-list">-->
-            <!--<div class="schedule-head">-->
-              <!--<div class="schedule-head-item"></div>-->
-              <!--<div class="schedule-head-item">Stage A</div>-->
-              <!--&lt;!&ndash;<div class="schedule-head-item">Stage B</div>&ndash;&gt;-->
-            <!--</div>-->
-
-            <!--<div class="schedule-body">-->
-            <!--</div>-->
-          <!--</div>-->
+        <!--<div class="m-t-50 p-t-50 h3 text-center text-grey">-->
+        <!--${{ index.schedule_txt }}$-->
         <!--</div>-->
+
+        <div class="schedule-list-container">
+          <div id="schedule-list" class="schedule-list">
+            <div class="schedule-head">
+              <div class="schedule-head-item"></div>
+              <div class="schedule-head-item">Stage A</div>
+              <!--<div class="schedule-head-item">Stage B</div>-->
+            </div>
+
+            <div class="schedule-body">
+            </div>
+          </div>
+        </div>
       </div>
       <div class="user-select-none">
         <img class="schedule-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/schedule_bg.png"
