--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -51,6 +51,16 @@
     f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-N7X8M58');</script>
   <!-- End Google Tag Manager -->
+
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124824638-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-124824638-1');
+  </script>
 </head>
 <body itemscope itemtype="http://schema.org/Event">
 
