media partners block added

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -488,6 +488,19 @@
             </a>
           </div>
         </div>
+
+        <div class="m-t-80">
+          <h3 class="text-center m-b-30">${{ index.sponsors_media_heading }}$</h3>
+
+          <div class="sponsors-media-list">
+
+
+            <a href="https://od.itstep.org/" class="sponsors-media-item" title="indigo">
+              <img src="public/img/media_partners/shag.png" alt="shag">
+            </a>
+
+          </div>
+        </div>
       </div>
       <div class="user-select-none m-b-20">
         <img class="sponsors-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/sponsors_bg.png"
