--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -487,7 +487,7 @@
           </p>
           <p>
             ${{ index.sponsors_txt_5 }}$ -
-            <a class="text-bold link white-space-nw" href="tg://resolve?domain=Cherni44ka">+38 (050) 373 14 65</a> /
+            <a class="text-bold link white-space-nw" href="tg://resolve?domain=Cherni44ka">@Cherni44ka</a> /
             ${{ index.sponsors_julia }}$
           </p>
 
