--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -115,6 +115,12 @@
                 <a href="https://www.instagram.com/odessapy_conference" target="_blank" title="instagram">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
+                <a href="https://www.linkedin.com/groups/12136438?village=enabled" target="_blank" title="linkedin">
+                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </a>
+                <a href="https://t.me/OdessaPYConference" target="_blank" title="telegram">
+                  <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                </a>
               </div>
             </li>
 
@@ -144,6 +150,12 @@
           </a>
           <a href="https://www.instagram.com/odessapy_conference" target="_blank" title="instagram">
             <i class="fa fa-instagram" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.linkedin.com/groups/12136438?village=enabled" target="_blank" title="linkedin">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+          </a>
+          <a href="https://t.me/OdessaPYConference" target="_blank" title="telegram">
+            <i class="fa fa-paper-plane" aria-hidden="true"></i>
           </a>
         </div>
         <div class="brgr-menu"></div>
