--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -175,9 +175,15 @@
             <img src="public/img/logo.png?v1.01" alt="OdessaPy Conference" itemprop="image">
             <!--<img src="public/img/logo_py_1.svg" alt="OdessaPy Conference" itemprop="image">-->
 
-            <div class="text-center heading-tickets-btn m-t-40 m-b-50">
+            <div class="text-center heading-tickets-btn m-t-40 m-b-30">
               <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank"
                  class="btn btn-light-green">${{ index.menu_tickets }}$</a>
+            </div>
+
+            <div class="m-t-10 text-center volunteer-header">
+              <a href="https://goo.gl/forms/sJA5sZwPSyenM4uH2" class="btn">
+                ${{ index.volunteer }}$
+              </a>
             </div>
 
           </div>
@@ -526,6 +532,12 @@
       </div>
 
       <div id="map" class="m-t-50" style="height: 500px; width: 100%"></div>
+
+      <div class="m-t-70 text-center volunteer-footer">
+        <a href="https://goo.gl/forms/sJA5sZwPSyenM4uH2" class="btn">
+          ${{ index.volunteer }}$
+        </a>
+      </div>
 
       <div class="user-select-none m-b-20">
         <img class="sponsors-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/sponsors_bg.png"
