--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -28,7 +28,8 @@
     window.CONFIG = {
       BASE_URL : '/',
       LANG : '${{ index.lang }}$',
-      GOOGLE_API_KEY: 'AIzaSyA4lJHfEHkDb77duDBo2ri7eMtp3AqmZQQ'
+      GOOGLE_API_KEY: 'AIzaSyA4lJHfEHkDb77duDBo2ri7eMtp3AqmZQQ',
+      GOOGLE_API_VERSION : '3.34'
     };
   </script>
 
