--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -433,6 +433,10 @@
             <a href="https://od.itstep.org/" class="sponsors-media-item" target="_blank">
               <img src="public/img/media_partners/shag.png" alt="shag">
             </a>
+            <a href="https://www.digest.pro/" class="sponsors-media-item" target="_blank">
+              <img src="public/img/conference_partners/digest.png" alt="digest">
+            </a>
+
 
           </div>
         </div>
