--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -28,7 +28,7 @@
     window.CONFIG = {
       BASE_URL : '/',
       LANG : '${{ index.lang }}$',
-      GOOGLE_API_KEY: 'AIzaSyA4lJHfEHkDb77duDBo2ri7eMtp3AqmZQQ',
+      GOOGLE_API_KEY : 'AIzaSyA4lJHfEHkDb77duDBo2ri7eMtp3AqmZQQ',
       GOOGLE_API_VERSION : '3.34'
     };
   </script>
@@ -445,23 +445,25 @@
     </section>
 
     <section id="location">
-      <div class="h2">
-        ${{ index.location_heading }}$
-      </div>
+      <div class="container">
+        <div class="h2">
+          ${{ index.location_heading }}$
+        </div>
 
-      <h3 class="text-center m-b-30">${{ index.location_address }}$</h3>
+        <h3 class="text-center m-b-30">${{ index.location_address }}$</h3>
 
-      <div id="map" class="m-t-50" style="height: 500px; width: 100%"></div>
+        <div id="map" class="m-t-50" style="height: 500px; width: 100%"></div>
 
-      <div class="m-t-70 text-center volunteer-footer">
-        <a href="https://goo.gl/forms/sJA5sZwPSyenM4uH2" class="btn">
-          ${{ index.volunteer }}$
-        </a>
-      </div>
+        <div class="m-t-70 text-center volunteer-footer">
+          <a href="https://goo.gl/forms/sJA5sZwPSyenM4uH2" class="btn">
+            ${{ index.volunteer }}$
+          </a>
+        </div>
 
-      <div class="user-select-none m-b-20">
-        <img class="sponsors-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/sponsors_bg.png"
-             alt="seagull">
+        <div class="user-select-none m-b-20">
+          <img class="sponsors-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/sponsors_bg.png"
+               alt="seagull">
+        </div>
       </div>
     </section>
   </div>
