--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -425,21 +425,16 @@
         <!-- Conference partners-->
 
         <!-- Media Partners -->
-        <!--<div class="m-t-80">-->
-          <!--<h3 class="text-center m-b-30">${{ index.sponsors_media_heading }}$</h3>-->
+        <div class="m-t-80">
+          <h3 class="text-center m-b-30">${{ index.sponsors_media_heading }}$</h3>
 
-          <!--<div class="sponsors-media-list">-->
+          <div class="sponsors-media-list">
 
-            <!--<a href="https://od.itstep.org/" class="sponsors-media-item" target="_blank">-->
-              <!--<img src="public/img/media_partners/shag.png" alt="shag">-->
-            <!--</a>-->
-            <!--<a href="https://www.digest.pro/" class="sponsors-media-item" target="_blank">-->
-              <!--<img src="public/img/conference_partners/digest.png" alt="digest">-->
-            <!--</a>-->
-
-
-          <!--</div>-->
-        <!--</div>-->
+            <a href="https://od.itstep.org/" class="sponsors-media-item" target="_blank">
+              <img src="public/img/media_partners/shag.png" alt="shag">
+            </a>
+          </div>
+        </div>
         <!-- Media Partners -->
       </div>
     </section>
