--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -447,7 +447,11 @@
 
         <h3 class="text-center m-b-30">${{ index.location_address }}$</h3>
 
-        <div id="map" class="m-t-50" style="height: 500px; width: 100%"></div>
+      </div>
+
+      <div id="map" class="m-t-50" style="height: 500px; width: 100%"></div>
+
+      <div class="container">
 
         <div class="m-t-70 text-center volunteer-footer">
           <a href="https://goo.gl/forms/sJA5sZwPSyenM4uH2" class="btn">
