--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -273,17 +273,6 @@
                     1500 <span itemprop="priceCurrency" content="UAH">UAH</span>
                   </div>
                 </li>
-                <!--<li class="about-ticket-item">-->
-
-                <!--<a href="#">-->
-                <!--<div class="about-ticket-title">-->
-                <!--Late-->
-                <!--</div>-->
-                <!--</a>-->
-                <!--<div class="about-ticket-desc">-->
-                <!--1650 UAH-->
-                <!--</div>-->
-                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -432,6 +421,16 @@
 
             <a href="https://od.itstep.org/" class="sponsors-media-item" target="_blank">
               <img src="public/img/media_partners/shag.png" alt="shag">
+            </a>
+
+            <a href="https://itvdn.com"
+               class="sponsors-media-item" target="_blank">
+              <img src="public/img/media_partners/itvdn.png" alt="ITVDN">
+            </a>
+
+            <a href="https://edu.cbsystematics.com/"
+               class="sponsors-media-item" target="_blank">
+              <img src="public/img/media_partners/cbs.png" alt="CyberBionic">
             </a>
           </div>
         </div>
