--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -251,17 +251,17 @@
               <meta itemprop="validFrom" content="2018-09-30">
 
               <ul class="about-tickets-list" itemprop="price" content="1350.00">
-                <li class="about-ticket-item">
-                  <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">
-                    <div class="about-ticket-title">
-                      Early Bird <br>
-                      Ticket
-                    </div>
-                  </a>
-                  <div class="about-ticket-desc">
-                    1350 <span itemprop="priceCurrency" content="UAH">UAH</span>
-                  </div>
-                </li>
+                <!--<li class="about-ticket-item">-->
+                  <!--<a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">-->
+                    <!--<div class="about-ticket-title">-->
+                      <!--Early Bird <br>-->
+                      <!--Ticket-->
+                    <!--</div>-->
+                  <!--</a>-->
+                  <!--<div class="about-ticket-desc">-->
+                    <!--1350 <span itemprop="priceCurrency" content="UAH">UAH</span>-->
+                  <!--</div>-->
+                <!--</li>-->
                 <li class="about-ticket-item" itemprop="price" content="1750.00">
                   <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">
                     <div class="about-ticket-title">
