--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -252,15 +252,15 @@
 
               <ul class="about-tickets-list" itemprop="price" content="1350.00">
                 <!--<li class="about-ticket-item">-->
-                  <!--<a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">-->
-                    <!--<div class="about-ticket-title">-->
-                      <!--Early Bird <br>-->
-                      <!--Ticket-->
-                    <!--</div>-->
-                  <!--</a>-->
-                  <!--<div class="about-ticket-desc">-->
-                    <!--1350 <span itemprop="priceCurrency" content="UAH">UAH</span>-->
-                  <!--</div>-->
+                <!--<a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">-->
+                <!--<div class="about-ticket-title">-->
+                <!--Early Bird <br>-->
+                <!--Ticket-->
+                <!--</div>-->
+                <!--</a>-->
+                <!--<div class="about-ticket-desc">-->
+                <!--1350 <span itemprop="priceCurrency" content="UAH">UAH</span>-->
+                <!--</div>-->
                 <!--</li>-->
                 <li class="about-ticket-item" itemprop="price" content="1750.00">
                   <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">
@@ -413,6 +413,19 @@
         </div>
         <!-- Conference partners-->
 
+        <!-- HR partners-->
+        <div class="m-t-80">
+          <h3 class="text-center m-b-30">${{ index.sponsors_hr_heading }}$</h3>
+
+          <div class="sponsors-media-list">
+            <a href="https://www.daxx.com/" class="sponsors-media-item" target="_blank"
+               style="flex: 0 0 25%; max-width: 25%;">
+              <img src="public/img/hr_partners/rabota_ua.jpg" alt="rabota.ua" style="max-width: none">
+            </a>
+          </div>
+        </div>
+        <!-- HR partners-->
+
         <!-- Media Partners -->
         <div class="m-t-80">
           <h3 class="text-center m-b-30">${{ index.sponsors_media_heading }}$</h3>
@@ -431,6 +444,17 @@
             <a href="https://edu.cbsystematics.com/"
                class="sponsors-media-item" target="_blank">
               <img src="public/img/media_partners/cbs.png" alt="CyberBionic">
+            </a>
+
+            <a href="https://beetroot.academy/"
+               class="sponsors-media-item" target="_blank">
+              <img src="public/img/media_partners/beetroot_academy.png" alt="beetroot_academy">
+            </a>
+
+
+            <a href="https://3dlook.me/"
+               class="sponsors-media-item" target="_blank">
+              <img src="public/img/media_partners/3d_look.png" alt="3d_look">
             </a>
           </div>
         </div>
@@ -457,6 +481,12 @@
             ${{ index.volunteer }}$
           </a>
         </div>
+
+        <!--<div class="m-t-40  text-center volunteer-footer">-->
+          <!--<a href="javascript: void(0)" class="btn m-10">-->
+            <!--${{ index.code_conduct }}$-->
+          <!--</a>-->
+        <!--</div>-->
       </div>
 
       <div class="user-select-none m-b-20">
