--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -418,9 +418,8 @@
           <h3 class="text-center m-b-30">${{ index.sponsors_hr_heading }}$</h3>
 
           <div class="sponsors-media-list">
-            <a href="https://www.daxx.com/" class="sponsors-media-item" target="_blank"
-               style="flex: 0 0 25%; max-width: 25%;">
-              <img src="public/img/hr_partners/rabota_ua.jpg" alt="rabota.ua" style="max-width: none">
+            <a href="https://www.daxx.com/" class="sponsors-media-item sponsors-media-wide" target="_blank">
+              <img src="public/img/hr_partners/rabota_ua.jpg" alt="rabota.ua">
             </a>
           </div>
         </div>
