--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -418,7 +418,7 @@
           <h3 class="text-center m-b-30">${{ index.sponsors_hr_heading }}$</h3>
 
           <div class="sponsors-media-list">
-            <a href="https://www.daxx.com/" class="sponsors-media-item sponsors-media-wide" target="_blank">
+            <a href="https://rabota.ua/" class="sponsors-media-item sponsors-media-wide" target="_blank">
               <img src="public/img/hr_partners/rabota_ua.jpg" alt="rabota.ua">
             </a>
           </div>
