--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -274,6 +274,50 @@
                   </div>
                 </li>
               </ul>
+
+              <ul class="about-advantages">
+                <li class="about-advantage-item">
+                  <div class="about-advantage-icon">
+                    <i class="fa fa-bullhorn"></i>
+                  </div>
+                  <div class="about-advantage-text">
+                    ${{ index.about_advantages_1 }}$
+                  </div>
+                </li>
+                <li class="about-advantage-item">
+                  <div class="about-advantage-icon">
+                    <i class="fa fa-users"></i>
+                  </div>
+                  <div class="about-advantage-text">
+                    ${{ index.about_advantages_2 }}$
+                  </div>
+                </li>
+                <li class="about-advantage-item">
+                  <div class="about-advantage-icon">
+                    <i class="fa fa-cutlery"></i>
+                  </div>
+                  <div class="about-advantage-text">
+                    ${{ index.about_advantages_3 }}$
+                  </div>
+                </li>
+                <li class="about-advantage-item">
+                  <div class="about-advantage-icon">
+                    <i class="fa fa-trophy"></i>
+                  </div>
+                  <div class="about-advantage-text">
+                    ${{ index.about_advantages_4 }}$
+                  </div>
+                </li>
+                <li class="about-advantage-item">
+                  <div class="about-advantage-icon">
+                    <i class="fa fa-glass"></i>
+                  </div>
+                  <div class="about-advantage-text">
+                    ${{ index.about_advantages_5 }}$
+                  </div>
+                </li>
+
+              </ul>
             </div>
           </div>
 
@@ -482,9 +526,9 @@
         </div>
 
         <!--<div class="m-t-40  text-center volunteer-footer">-->
-          <!--<a href="javascript: void(0)" class="btn m-10">-->
-            <!--${{ index.code_conduct }}$-->
-          <!--</a>-->
+        <!--<a href="javascript: void(0)" class="btn m-10">-->
+        <!--${{ index.code_conduct }}$-->
+        <!--</a>-->
         <!--</div>-->
       </div>
 
