--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -495,10 +495,14 @@
               <img src="public/img/media_partners/beetroot_academy.png" alt="beetroot_academy">
             </a>
 
-
             <a href="https://3dlook.me/"
                class="sponsors-media-item" target="_blank">
               <img src="public/img/media_partners/3d_look.png" alt="3d_look">
+            </a>
+
+            <a href="https://chisw.com/"
+               class="sponsors-media-item" target="_blank">
+              <img src="public/img/media_partners/chi.png" alt="chi">
             </a>
           </div>
         </div>
