--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -504,6 +504,16 @@
                class="sponsors-media-item" target="_blank">
               <img src="public/img/media_partners/chi.png" alt="chi">
             </a>
+
+            <a href="https://www.facebook.com/moveonmiles/"
+               class="sponsors-media-item" target="_blank">
+              <img src="public/img/media_partners/mom.png" alt="mom">
+            </a>
+
+            <a href="https://www.facebook.com/itcluster.konotop/?ref=br_rs"
+               class="sponsors-media-item" target="_blank">
+              <img src="public/img/media_partners/it_cluster_konotop.jpg" alt="it_cluster_konotop">
+            </a>
           </div>
         </div>
         <!-- Media Partners -->
