--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -512,8 +512,10 @@
 
             <a href="https://www.facebook.com/itcluster.konotop/?ref=br_rs"
                class="sponsors-media-item" target="_blank">
-              <img src="public/img/media_partners/it_cluster_konotop.jpg" alt="it_cluster_konotop">
+              <img src="public/img/media_partners/it_cluster_konotop.jpg" alt="it cluster konotop">
             </a>
+
+
           </div>
         </div>
         <!-- Media Partners -->
