added silver sponsor beetroot

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -496,6 +496,24 @@
           </div>
         </div>
         <!-- HR partners-->
+        
+        <!-- Sponsors heading-->
+        <div class="m-t-80">
+            <h3 class="text-center m-b-30">${{ index.sponsors_head }}$</h3>
+        </div>
+        <!-- Sponsors heading-->
+        
+        <!-- Silver sponsors-->
+        <div class="m-t-80">
+          <h3 class="text-center m-b-30">${{ index.sponsors_silver }}$</h3>
+
+          <div class="sponsors-media-list">
+            <a href="https://beetroot.se/" class="sponsors-media-item" target="_blank">
+              <img src="public/img/conference_partners/Beetroot.png" alt="Beetroot">
+            </a>
+          </div>
+        </div>
+        <!-- Silver sponsors-->
 
         <!-- Media Partners -->
         <div class="m-t-80">
