added silver sponsor competera

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -511,6 +511,10 @@
             <a href="https://beetroot.se/" class="sponsors-media-item" target="_blank">
               <img src="public/img/conference_partners/Beetroot.png" alt="Beetroot">
             </a>
+            
+            <a href="http://competera.net/" class="sponsors-media-item" target="_blank">
+              <img src="public/img/conference_partners/competera.png" alt="Competera">
+            </a>
           </div>
         </div>
         <!-- Silver sponsors-->
