--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -504,8 +504,8 @@
         <!-- Sponsors heading-->
         
         <!-- Silver sponsors-->
-        <div class="m-t-80">
-          <h3 class="text-center m-b-30">${{ index.sponsors_silver }}$</h3>
+        <div class="m-t-30">
+          <h4 class="sponsors-type text-center m-b-10">${{ index.sponsors_silver }}$</h4>
 
           <div class="sponsors-media-list">
             <a href="https://beetroot.se/" class="sponsors-media-item" target="_blank">
